[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "controltower"
version = "0.1.0"
description = "Local-first RAG platform for thesis and R&D opportunity discovery."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.8,<3",
]

[project.optional-dependencies]
phase2 = [
    "beautifulsoup4>=4.12",
    "chromadb>=0.5",
    "pymupdf>=1.24",
    "requests>=2.32",
]
ui = [
    "pandas>=2.2",
    "streamlit>=1.36",
]
agents = [
    "crewai>=0.80",
]
dev = [
    "pytest>=8.2",
    "ruff>=0.6",
]

[tool.setuptools]
packages = ["src", "src.database"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

